tests/ui/traits/suggest-dereferences/suggest-dereferencing-receiver-argument.stderr
error[E0277]: the trait bound `TargetStruct: From<&{integer}>` is not satisfied
  --> $DIR/suggest-dereferencing-receiver-argument.rs:13:30
   |
LL |     let _b: TargetStruct = a.into();
   |                              ^^^^ unsatisfied trait bound
   |
help: the trait `From<&{integer}>` is not implemented for `TargetStruct`
  --> $DIR/suggest-dereferencing-receiver-argument.rs:3:1
   |
LL | struct TargetStruct;
   | ^^^^^^^^^^^^^^^^^^^
   = note: required for `&{integer}` to implement `Into<TargetStruct>`
help: consider dereferencing here
   |
LL |     let _b: TargetStruct = (*a).into();
   |                            ++ +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
